# dataMiddlePlatform

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  run_prod.py
alembic/: env.py
alembic/versions/: 111502876a39_add_conversations_and_messages.py  4c9087626ef9_init_documents_and_chunks.py  53eacc65c596_add_chunk_configs_and_parent_content.py  b68214f96ed9_add_unique_constraint_on_documents_.py  d150aa3129f4_add_sources_to_messages.py  d18b09984b02_add_schema_docs_semantic_layer.py  eebf3ca13bb4_add_tsvector_column_and_gin_index_for_.py
app/: __init__.py  main.py
app/api/v1/: router.py
app/core/: config.py  eventloop.py  exceptions.py  logging.py  middleware.py
app/db/: base.py  session.py
app/models/: __init__.py  chunk_config.py  conversation.py  document.py  schema_doc.py
app/services/agent/: agent.py  context.py  tools.py
app/services/chat/: history.py  sources.py
app/services/llm/: client.py
app/services/rag/: __init__.py  chunk_config.py  chunking.py  documents.py  embedding.py  ingest.py  parsing.py  rerank.py  retrieval.py  tokenize.py  upload.py
app/services/storage/: minio_client.py
app/services/texttosql/: __init__.py  db.py  generate.py  query.py  semantic_layer.py  (+1 more)
app/workers/: queue.py  tasks.py
scripts/: batch_ingest.py  check_mssql.py  ops.ps1  register_views.py  scaffold_schema.py
tests/: conftest.py  test_errors.py  test_health.py  test_meta.py  test_texttosql_validate.py  test_upload_validation.py
项目选型/: RAG系统.md  README.md  TextToSQL.md  中台架构.md  工作清单.md  数据库与迁移SOP.md  评测问题集.md  运维手册.md
(+7 files in other folders)
