[project]
name = "data-middle-platform"
version = "0.1.0"
description = "制造业数据中台 — RAG + TextToSQL 后端服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # DB / ORM
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "alembic>=1.13.0",
    # 任务队列（PostgreSQL 后端，无需 Redis）
    "procrastinate>=2.0.0",
    # 对象存储
    "minio>=7.2.0",
    # LLM / Agent
    "openai>=1.40.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
    "langchain-openai>=1.3.3",
    "langchain>=1.3.11",
    "sse-starlette>=3.4.5",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "langchain-text-splitters>=1.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",#代码检查
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
